--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
@@ -13,14 +13,15 @@
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
-            border: 1px solid darkblue;
+            border: 1px solid rgb(55, 55, 151);
             border-radius: 15px;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.411);
         }
@@ -37,7 +38,7 @@
 <body>
     <main>
         <h1>teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptate sed aperiam voluptates vero fugit debitis quas mollitia excepturi quasi, aliquam explicabo aut magnam optio itaque consequuntur minus ab alias! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti excepturi nemo aliquid dolor pariatur cumque facilis quia dicta minima, vero adipisci consequuntur rem quibusdam nesciunt? Quisquam quo id quaerat necessitatibus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga perspiciatis quos illum, repudiandae assumenda id officia nam, possimus numquam nemo modi error iusto totam eaque nostrum. Illo eos reiciendis quis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptate sed aperiam voluptates vero fugit debitis quas mollitia excepturi quasi, aliquam explicabo aut magnam optio itaque consequuntur minus ab alias! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti excepturi nemo aliquid dolor pariatur cumque facilis quia dicta minima, vero adipisci consequuntur rem quibusdam nesciunt? Quisquam quo id quaerat necessitatibus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga perspiciatis quos illum, repudiandae assumenda id officia nam, possimus numquam nemo modi error iusto totam eaque nostrum. Illo eos reiciendis quis! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo vitae ab maiores non rem inventore nostrum, aliquam quam accusamus minus veritatis sapiente modi ipsam autem cupiditate. Ut deserunt eaque quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, quas? Libero facilis voluptate ad commodi enim numquam officiis soluta voluptas nulla, distinctio, natus saepe debitis corporis voluptatum deleniti delectus minus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus beatae saepe maiores quae voluptates rem sed corrupti id illum explicabo voluptatum ut, alias voluptatibus ea. Voluptates asperiores officiis quod eius. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem praesentium cupiditate eos itaque tenetur, impedit quaerat magni distinctio facilis libero expedita corrupti veniam numquam eius! Nesciunt aut sapiente quaerat corporis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero nesciunt, neque veniam nisi similique dolore sed modi, voluptatum culpa, qui quod reprehenderit? Minus sapiente officiis quis quam illum nihil vel. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam laudantium tenetur cupiditate unde nemo itaque amet in temporibus dolorum ut, repellat quidem possimus similique perferendis aut, corporis nesciunt sed aspernatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facere aut officia porro tempore est iusto perferendis consectetur, labore ullam sapiente recusandae nemo, omnis ut odio quia qui deserunt illum!</p>
     </main>
 </body>
 </html>
