--- a/exercicios/teste003/teste.html
+++ b/exercicios/teste003/teste.html
@@ -8,7 +8,7 @@
 
     <style>
         body {
-            height: 100%;
+            height: 100%;          
         }
 
         header {
@@ -20,6 +20,8 @@
         main {
             height: 80vh;
             width: auto;
+            display: flex;
+            flex-direction: column;
         }
 
         footer {
@@ -27,6 +29,7 @@
             width: 100%;
             background-color: black;
             color: white;
+            display: flex;
         }
 
         section {
